[package]
edition = "2021"
name = "LoRa-test"
version = "0.1.0"

[dependencies]
# Change stm32l072cz to your chip name, if necessary. Also change it in .cargo/config.toml
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f411ce", "time-driver-any", "exti", "memory-x"]  }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }

lora-phy = { git = "https://github.com/lora-rs/lora-rs.git", rev = "b4ffa81", features = ["lorawan-radio"] }
lorawan-device = { git = "https://github.com/lora-rs/lora-rs.git", rev = "b4ffa81", default-features = false, features = ["embassy-time", "default-crypto", "defmt"] }
lorawan = { git = "https://github.com/lora-rs/lora-rs.git", rev = "b4ffa81", default-features = false, features = ["default-crypto"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal-bus = { version = "0.1.0", features = ["async"]}

[profile.release]
debug = 2

[profile.dev]
opt-level = 'z'